# janus-api

./: CMakeLists.txt  README.md
include/: iarpa_janus_io.h
src/: CMakeLists.txt  janus_io.cpp
src/cserver/: CMakeLists.txt  c_example.cpp  test.py
src/glaive/: CMakeLists.txt  CnnFeatex.cpp  CnnFeatex.hpp  CnnPoseDetection.cpp  CnnPoseDetection.hpp  CnnServer.cpp  CnnServer.hpp  ImagePreproc.cpp  ImagePreproc.hpp  PyServer.cpp  PyServer.hpp  glaive.cpp  glaive_common.hpp  janus_debug.h  python_wrappers.cpp  python_wrappers.h
src/opencv_io/: CMakeLists.txt  opencv_io.cpp
src/utils/: CMakeLists.txt  janus_create_gallery.cpp  janus_create_media_templates.cpp  janus_create_templates.cpp  janus_train_pca.cpp
src/webapi/: CMakeLists.txt  janus_web_api.cpp
